tests/paczka1/small_fuzzy/55131361.err
Error in line 3: OvjAKBA3GOj S28 16,3
Error in line 7: S28 S28 40,8
Error in line 4: OvjAKBA3GOj S585 84,7
